# aodv_sct

./: .gitignore  CMakeLists.txt  README.md
data/: event_seq.json
include/: .supervisor_s1.hpp.swp  events.hpp  sc_s1.hpp  sc_s2.hpp  vcu.hpp
src/: demo_aodv_sc.cpp  sc_s1.cpp  sc_s2.cpp  supervisor_s1.cpp  test.cpp  vcu.cpp
